# CompilerLab

./: .gitignore  20184319-余康-编译原理实验四.rar  CMakeLists.txt  FIRST.xlsx  main.cpp  mytest.s  qemu-riscv32dbg.sh  readme.txt  test.cpp  test.in  test1.s  test2  test2.c  test2.elf  test2.s  test_float_out  test_float_out.cpp  testconvert  testconvert.cpp  testt  testt.s  todo.txt  语法制导.xlsx
include/backend/: generator.h  rv_def.h  rv_inst_impl.h
include/front/: abstract_syntax_tree.h  lexical.h  semantic.h  syntax.h  token.h
include/ir/: ir_instruction.h  ir_operand.h  ir_operator.h
src/backend/: generator.cpp
src/front/: lexical.cpp  semantic.cpp  syntax.cpp
src/ir/: ir_function.cpp  ir_instruction.cpp  ir_operand.cpp  ir_program.cpp
src/tools/: ir_executor.cpp
test/: build.py  log.txt  run.py  runforcheckir.py  score.py  test.py
test/ref/s1/basic/: 01_var_defn2.json  02_var_defn3.json  04_arr_defn3.json  08_const_array_defn.json  09_func_defn.json  11_add2.json  12_addc.json  13_sub2.json  14_subc.json  15_mul.json  16_mulc.json  17_div.json  18_divc.json  20_rem.json  21_if_test2.json  22_if_test3.json  23_if_test4.json  25_while_if.json  26_while_test1.json  27_while_test2.json  29_break.json  30_continue.json  31_while_if_test1.json  32_while_if_test2.json  33_while_if_test3.json  35_op_priority1.json  36_op_priority2.json  37_op_priority3.json  41_unary_op2.json  42_empty_stmt.json
test/ref/s1/function/: 28_while_test3.json  34_arr_expr_len.json  38_op_priority4.json  39_op_priority5.json  (+6 more)
test/testcase/function/: 95_float.in  95_float.out
